--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,8 @@ dependencies:
   protobuf: ^0.13.3
   camera: ^0.4.0
   http: ^0.12.0
+  flutter_form_builder: ^1.4.0
+  grpc: ^0.6.6
   flutter:
     sdk: flutter
 
